Semaphore exam example implemented